  * Changes: Updated list of libraries to preload
  * Fixes: NB#291089 - Installation of clock application fails when applauncherd daemon stopped
  * Changes: Adds new test for applauncherd re-exec. Checking state of running application when it is updated.
  * Changes: single-instance library writes log messages to syslog instead of stderr
  * Changes: testcases added/fixed for code coverage

 -- Alexey Shilov <alexey@trdhcp147241>  Mon, 14 Nov 2011 13:39:38 +0200

applauncherd (2.0.13) stable; urgency=low

  * Fixes: NB#291039 - Integrated version of applauncherd is missing some important test cases
  * Changes: testcases added/fixed for code coverage

 -- Thyagarajan Balakrishnan <ext-thyagarajan.1.balarishnan@nokia.com>  Tue, 22 Nov 2011 11:27:40 +0200

applauncherd (2.0.12) stable; urgency=low

  * Changes: new test case added for /usr/lib trigger
  * fixes for nightly build test failures

 -- Dmitry Rozenshtein <ext-dmitry.2.rozenshtein@nokia.com>  Wed, 11 Nov 2011 14:30:21 +0200

applauncherd (2.0.11) stable; urgency=low

  * Fixes: NB#287488 - Boosted QML application startup time is above requirements

 -- Dmitry Rozenshtein <ext-dmitry.2.rozenshtein@nokia.com>  Wed, 09 Nov 2011 14:55:21 +0200

applauncherd (2.0.10) stable; urgency=low

  * Fixes: NB#283676 - running processes are not granted new credentials until restarted
  * Changes: Adds new test for applauncherd re-exec. In test new package is installed with custom credential token.

 -- Marek Ruszczak <ext-marek.ruszczak@nokia.com>  Wed, 09 Nov 2011 09:23:18 +0200

applauncherd (2.0.9) stable; urgency=low

  * Changes: Updated testscript for performance measurement (workaround for MCompositor XGrabServer delay)
  * Fixes: NB#289792 - Upgrade from PR1.1 aborts around 66% due to applauncherd-launcher

 -- Thyagarajan Balakrishnan <ext-thyagarajan.1.balarishnan@nokia.com>  Mon, 07 Nov 2011 14:55:11 +0200

applauncherd (2.0.8) stable; urgency=low
