@@ -6,6 +6,7 @@ applauncherd (3.0.1) unstable; urgency=low
   * Changes: Adds new test for applauncherd re-exec. Checking state of running application when it is updated.
   * Changes: single-instance library writes log messages to syslog instead of stderr
   * Changes: testcases added/fixed for code coverage
+  * Changes: Fix python broken pipe randomly happened for Popen
 
  -- Alexey Shilov <alexey@trdhcp147241>  Mon, 14 Nov 2011 13:39:38 +0200
 
